<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".register.RegisterFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_oidc_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_by_oidc"
        android:alpha="0.5"
        android:clickable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_webview_button"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_webview_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_web_login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/register_qr_manual_button"
        app:layout_constraintTop_toBottomOf="@id/register_oidc_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_qr_manual_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_qr_manual_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/register_webview_button"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
